Use groovy funcs for publishing

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -2,255 +2,171 @@
  * -------------------------------------------------
  *  Nextflow config file for module specific-options
  * -------------------------------------------------
+ *
+ *   Available keys to override module options:
+ *     args          = Additional arguments appended to command in module.
+ *     args2         = Second set of arguments appended to command in module (multi-tool modules).
+ *     publish_by_id = Publish results in separate folders by meta.id value.
+ *     publish_dir   = Directory to publish results.
+ *     publish_files = Groovy map where key = "file_ext" and value = "directory" to only publish results
+ *                     for a particular file extension. The value of "directory" is appended to the standard
+ *                     "publish_dir" path as defined above.
+ *     suffix        = File name suffix for output files
  */
 
-// Function to initialise default values and to generate a Groovy Map of module options
-def module_options (Map args) {
-    def Map options = [:]
-    options.args            = args.args ?: ''
-    options.args2           = args.args2 ?: ''
-    options.publish_dir     = args.publish_dir ?: ''
-    options.publish_results = args.publish_results ?: 'all'
-    options.publish_by_id   = args.publish_by_id ?: false
-    options.suffix          = args.suffix ?: ''
-    return options
+params {
+    modules {
+        'samplesheet_check' {
+            publish_dir      = "pipeline_info"
+        }
+        'fastqc' {
+            args             = "--quiet"
+        }
+        'trimgalore' {
+            args             = "--fastqc"
+        }
+        'bwa_index' {
+            args             = "-a bwtsw"
+            publish_dir      = "genome/bwa_index"
+        }
+        'gtf2bed' {
+            publish_dir      = "genome"
+        }
+        'make_genome_filter' {
+            publish_dir      = "genome"
+        }
+        'get_chrom_sizes' {
+            publish_dir      = "genome"
+        }
+        'bwa_mem' {
+            args             = "-M"
+            args2            = "-h -F 0x0100 -O BAM"
+            publish_dir      = "bwa/library"
+            suffix           = ".Lb"
+        }
+        'samtools_sort_lib' {
+            publish_dir      = "bwa/library"
+            suffix           = ".Lb.sorted"
+        }
+        'picard_mergesamfiles' {
+            args             = "SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+            publish_dir      = "bwa/mergedLibrary"
+            suffix           = ".mLb.sorted"
+        }
+        'picard_markduplicates' {
+            args             = "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+            publish_dir      = "bwa/mergedLibrary"
+            suffix           = ".mLb.mkD.sorted"
+        }
+        'samtools_sort_merged_lib' {
+            publish_dir      = "bwa/mergedLibrary"
+            suffix           = ".mLb.mkD.sorted"
+        }
+        'bam_filter' {
+            publish_dir      = "bwa/mergedLibrary"
+            suffix           = ".mLb.flT.sorted"
+        }
+        'bam_remove_orphans' {
+            args             = "--only_fr_pairs"
+            publish_dir      = "bwa/mergedLibrary"
+            suffix           = ".mLb.clN"
+        }
+        'samtools_sort_filter' {
+            publish_dir      = "bwa/mergedLibrary"
+            suffix           = ".mLb.clN.sorted"
+        }
+        'picard_collectmultiplemetrics' {
+            args             = "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+            publish_dir      = "bwa/mergedLibrary/picard_metrics"
+            suffix           = ".mLb.clN.sorted"
+        }
+        'preseq_lcextrap' {
+            args             = "-verbose -bam -seed 1"
+            publish_dir      = "bwa/mergedLibrary/preseq"
+            suffix           = ".mLb.clN"
+        }
+        'phantompeakqualtools' {
+            publish_dir      = "bwa/mergedLibrary/phantompeakqualtools"
+            suffix           = ".mLb.clN"
+        }
+        'multiqc_custom_phantompeakqualtools' {
+            publish_files      = [:]
+        }
+        'bedtools_genomecov' {
+            publish_dir      = "bwa/mergedLibrary/bigwig"
+            suffix           = ".mLb.clN"
+        }
+        'ucsc_bedgraphtobigwig' {
+            publish_dir      = "bwa/mergedLibrary/bigwig"
+            suffix           = ".mLb.clN"
+        }
+        'deeptools_computematrix' {
+            args             = "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels"
+            publish_dir      = "bwa/mergedLibrary/deeptools"
+            suffix           = ".mLb.clN"
+        }
+        'deeptools_plotprofile' {
+            publish_dir      = "bwa/mergedLibrary/deeptools"
+            suffix           = ".mLb.clN"
+        }
+        'deeptools_plotheatmap' {
+            publish_dir      = "bwa/mergedLibrary/deeptools"
+            suffix           = ".mLb.clN"
+        }
+        'deeptools_plotfingerprint' {
+            args             = "--skipZeros"
+            publish_dir      = "bwa/mergedLibrary/deeptools"
+            suffix           = ".mLb.clN"
+        }
+        'macs2_callpeak' {
+            args             = "--keep-dup all"
+            publish_dir      = "bwa/mergedLibrary/macs2"
+        }
+        'frip_score' {
+            args             = "-bed -c -f 0.20"
+            publish_files    = [:]
+        }
+        'multiqc_custom_peaks' {
+            publish_files    = [:]
+        }
+        'plot_macs2_qc' {
+            args             = "-o ./ -p macs2_peak"
+            publish_dir      = "bwa/mergedLibrary/macs2"
+        }
+        'homer_annotatepeaks_macs2' {
+            args             = "-gid"
+            publish_dir      = "bwa/mergedLibrary/macs2"
+            suffix           = "_peaks"
+        }
+        'plot_homer_annotatepeaks' {
+            args             = "-o ./ -p macs2_annotatePeaks"
+            publish_dir      = "bwa/mergedLibrary/macs2"
+        }
+        'macs2_consensus' {
+            publish_dir      = "bwa/mergedLibrary/macs2"
+            publish_by_id    = true
+        }
+        'homer_annotatepeaks_consensus' {
+            args             = "-gid"
+            publish_dir      = "bwa/mergedLibrary/macs2"
+            publish_by_id    = true,
+            suffix           = ".consensus_peaks"
+        }
+        'subread_featurecounts' {
+            args             = "-F SAF -O --fracOverlap 0.2"
+            publish_dir      = "bwa/mergedLibrary/macs2"
+        }
+        'deseq2_featurecounts' {
+            publish_dir      = "bwa/mergedLibrary/macs2"
+        }
+        'igv' {
+            publish_dir      = "igv"
+        }
+        'get_software_versions' {
+            publish_dir      = "pipeline_info"
+        }
+        'output_documentation' {
+            publish_dir      = "pipeline_info"
+        }
+    }
 }
-
-def Map modules = [:]
-modules['samplesheet_check'] =
-    module_options (
-        publish_dir     : "pipeline_info"
-    )
-
-modules['fastqc'] =
-    module_options (
-        args            : "--quiet",
-        publish_dir     : "fastqc"
-    )
-
-modules['trimgalore'] =
-    module_options (
-        args            : "--fastqc",
-        publish_dir     : "trimgalore"
-    )
-
-modules['bwa_index'] =
-    module_options (
-        args            : "-a bwtsw",
-        publish_dir     : "genome/bwa_index"
-    )
-
-modules['gtf2bed']  =
-    module_options (
-        publish_dir     : "genome"
-    )
-
-modules['make_genome_filter'] =
-    module_options (
-        publish_dir     : "genome"
-    )
-
-modules['get_chrom_sizes'] =
-    module_options (
-        publish_dir     : "genome"
-    )
-
-modules['bwa_mem'] =
-    module_options (
-        args            : "-M",
-        args2           : "-h -F 0x0100 -O BAM",
-        publish_dir     : "bwa/library",
-        suffix          : ".Lb"
-    )
-
-modules['samtools_sort_lib'] =
-    module_options (
-        publish_dir     : "bwa/library",
-        suffix          : ".Lb.sorted"
-    )
-
-modules['picard_mergesamfiles'] =
-    module_options (
-        args            : "SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp",
-        publish_dir     : "bwa/mergedLibrary",
-        suffix          : ".mLb.sorted"
-    )
-
-modules['picard_markduplicates'] =
-    module_options (
-        args            : "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp",
-        publish_dir     : "bwa/mergedLibrary",
-        suffix          : ".mLb.mkD.sorted"
-    )
-
-modules['samtools_sort_merged_lib'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary",
-        suffix          : ".mLb.mkD.sorted"
-    )
-
-modules['bam_filter'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary",
-        suffix          : ".mLb.flT.sorted"
-    )
-
-modules['bam_remove_orphans'] =
-    module_options (
-        args            : "--only_fr_pairs",
-        publish_dir     : "bwa/mergedLibrary",
-        suffix          : ".mLb.clN"
-    )
-
-modules['samtools_sort_filter'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary",
-        suffix          : ".mLb.clN.sorted"
-    )
-
-modules['picard_collectmultiplemetrics'] =
-    module_options (
-        args            : "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp",
-        publish_dir     : "bwa/mergedLibrary/picard_metrics",
-        suffix          : ".mLb.clN.sorted"
-    )
-
-modules['preseq_lcextrap'] =
-    module_options (
-        args            : "-verbose -bam -seed 1",
-        publish_dir     : "bwa/mergedLibrary/preseq",
-        suffix          : ".mLb.clN"
-    )
-
-modules['phantompeakqualtools'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary/phantompeakqualtools",
-        suffix          : ".mLb.clN"
-    )
-
-modules['multiqc_custom_phantompeakqualtools'] =
-    module_options (
-        publish_results : "none"
-    )
-
-modules['bedtools_genomecov'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary/bigwig",
-        suffix          : ".mLb.clN"
-    )
-
-modules['ucsc_bedgraphtobigwig'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary/bigwig",
-        suffix          : ".mLb.clN"
-    )
-
-modules['deeptools_computematrix'] =
-    module_options (
-        args            : "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels",
-        publish_dir     : "bwa/mergedLibrary/deeptools",
-        suffix          : ".mLb.clN"
-    )
-
-modules['deeptools_plotprofile'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary/deeptools",
-        suffix          : ".mLb.clN"
-    )
-
-modules['deeptools_plotheatmap'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary/deeptools",
-        suffix          : ".mLb.clN"
-    )
-
-modules['deeptools_plotfingerprint'] =
-    module_options (
-        args            : "--skipZeros",
-        publish_dir     : "bwa/mergedLibrary/deeptools",
-        suffix          : ".mLb.clN"
-    )
-
-modules['macs2_callpeak'] =
-    module_options (
-        args            : "--keep-dup all",
-        publish_dir     : "bwa/mergedLibrary/macs2"
-    )
-
-modules['frip_score'] =
-    module_options (
-        args            : "-bed -c -f 0.20",
-        publish_results : "none"
-    )
-
-modules['multiqc_custom_peaks'] =
-    module_options (
-        publish_results : "none"
-    )
-
-modules['plot_macs2_qc'] =
-    module_options (
-        args            : "-o ./ -p macs2_peak",
-        publish_dir     : "bwa/mergedLibrary/macs2"
-    )
-
-modules['homer_annotatepeaks_macs2'] =
-    module_options (
-        args            : "-gid",
-        publish_dir     : "bwa/mergedLibrary/macs2",
-        suffix          : "_peaks"
-    )
-
-modules['plot_homer_annotatepeaks'] =
-    module_options (
-        args            : "-o ./ -p macs2_annotatePeaks",
-        publish_dir     : "bwa/mergedLibrary/macs2",
-    )
-
-modules['macs2_consensus'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary/macs2",
-        publish_by_id   : true
-    )
-
-modules['homer_annotatepeaks_consensus'] =
-    module_options (
-        args            : "-gid",
-        publish_dir     : "bwa/mergedLibrary/macs2",
-        publish_by_id   : true,
-        suffix          : ".consensus_peaks"
-    )
-
-modules['subread_featurecounts'] =
-    module_options (
-        args            : "-F SAF -O --fracOverlap 0.2",
-        publish_dir     : "bwa/mergedLibrary/macs2",
-        suffix          : ""
-    )
-
-modules['deseq2_featurecounts'] =
-    module_options (
-        publish_dir     : "bwa/mergedLibrary/macs2"
-    )
-
-modules['igv'] =
-    module_options (
-        publish_dir     : "igv"
-    )
-
-modules['get_software_versions'] =
-    module_options (
-        publish_dir     : "pipeline_info"
-    )
-
-modules['output_documentation'] =
-    module_options (
-        publish_dir     : "pipeline_info"
-    )
-
-modules['multiqc'] =
-    module_options (
-        publish_dir     : "multiqc"
-    )
-
-params.modules = modules
