Update all modules

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,9 +29,6 @@ params {
             args          = "-a bwtsw"
             publish_dir   = "genome/bwa_index"
         }
-        'gtf2bed' {
-            publish_dir   = "genome"
-        }
         'make_genome_filter' {
             publish_dir   = "genome"
         }
@@ -163,7 +160,7 @@ params {
             publish_dir   = "igv"
         }
         'get_software_versions' {
-            publish_dir   = "pipeline_info"
+            publish_files = ['csv':'']
         }
         'output_documentation' {
             publish_dir   = "pipeline_info"
