Get pipeline working from end-to-end again. Woohoooooo

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -4,14 +4,17 @@
  * -------------------------------------------------
  *
  *   Available keys to override module options:
- *     args           = Additional arguments appended to command in module.
- *     args2          = Second set of arguments appended to command in module (multi-tool modules).
- *     publish_by_id  = Publish results in separate folders by meta.id value.
- *     publish_dir    = Directory to publish results.
- *     publish_files  = Groovy map where key = "file_ext" and value = "directory" to only publish results
- *                      for a particular file extension. The value of "directory" is appended to the standard
- *                      "publish_dir" path as defined above.
- *     suffix         = File name suffix for output files
+ *     MANDATORY
+ *       publish_dir    = Directory to publish results.
+ *
+ *     OPTIONAL
+ *       args           = Additional arguments appended to command in module.
+ *       args2          = Second set of arguments appended to command in module (multi-tool modules).
+ *       publish_by_id  = Publish results in separate folders by meta.id value.
+ *       publish_files  = Groovy map where key = "file_ext" and value = "directory" to only publish results
+ *                        for a particular file extension. The value of "directory" is appended to the standard
+ *                        "publish_dir" path as defined above.
+ *       suffix         = File name suffix for output files
  */
 
 params {
@@ -21,13 +24,18 @@ params {
         }
         'fastqc' {
             args          = "--quiet"
+            publish_dir   = "fastqc"
         }
         'trimgalore' {
             args          = "--fastqc"
+            publish_dir   = "trimgalore"
         }
         'bwa_index' {
             args          = "-a bwtsw"
             publish_dir   = "genome/bwa_index"
+        }
+        'gtf2bed' {
+            publish_dir   = "genome"
         }
         'make_genome_filter' {
             publish_dir   = "genome"
@@ -87,6 +95,7 @@ params {
             suffix        = ".mLb.clN"
         }
         'multiqc_custom_phantompeakqualtools' {
+            publish_dir   = "multiqc"
             publish_files = [:]
         }
         'bedtools_genomecov' {
@@ -121,9 +130,11 @@ params {
         }
         'frip_score' {
             args          = "-bed -c -f 0.20"
+            publish_dir   = "frip"
             publish_files = [:]
         }
         'multiqc_custom_peaks' {
+            publish_dir   = "multiqc"
             publish_files = [:]
         }
         'plot_macs2_qc' {
@@ -164,6 +175,9 @@ params {
         }
         'output_documentation' {
             publish_dir   = "pipeline_info"
+        }
+        'multiqc' {
+            publish_dir   = "multiqc"
         }
     }
 }
