--- a/conf/modules.config
+++ b/conf/modules.config
@@ -171,6 +171,7 @@ params {
             publish_dir   = "igv"
         }
         'get_software_versions' {
+            publish_dir   = "pipeline_info"
             publish_files = ['csv':'']
         }
         'output_documentation' {
