--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,7 +1,7 @@
 /*
- * -------------------------------------------------
- *  Nextflow config file for module specific-options
- * -------------------------------------------------
+ * --------------------------------------------------
+ *  Config file for defining DSL2 per module options
+ * --------------------------------------------------
  *
  *   Available keys to override module options:
  *       args           = Additional arguments appended to command in module.
