Add more docs annotation

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -11,6 +11,8 @@
  *       publish_files  = Groovy map where key = "file_ext" and value = "directory" to only publish results
  *                        for a particular file extension. The value of "directory" is appended to the standard
  *                        "publish_dir" path as defined above.
+ *                        If publish_files == null (unspecified)  - All files are published.
+ *                        If publish_files == Map [:] (empty map) - No files are published.
  *       suffix         = File name suffix for output files
  *
  */
