--- a/modules/nf-core/modules/bwa/index/meta.yml
+++ b/modules/nf-core/modules/bwa/index/meta.yml
@@ -1,25 +1,31 @@
-name: bwa index
-description: create indexes for BWA from a fasta file
+name: bwa_index
+description: Create BWA index for reference genome
 keywords:
     - index
+    - fasta
+    - genome
+    - reference
 tools:
     - bwa:
         description: |
-            BWA is a software package for mapping DNA sequences against a large reference genome, such as the human genome.
+            BWA is a software package for mapping DNA sequences against
+            a large reference genome, such as the human genome.
         homepage: http://bio-bwa.sourceforge.net/
         documentation: http://www.htslib.org/doc/samtools.html
         arxiv: arXiv:1303.3997
 input:
-    -
-        - input:
-            type: file
-            description: Input fasta file
-            pattern: "*.{fasta,fa}"
+    - fasta:
+        type: file
+        description: Input genome fasta file
 output:
-    -
-        - index:
-            type: file
-            description: bwa indexes file
-            pattern: "*.{fasta,fa}.{amb,ann,bwt,pac,sa}"
+    - index:
+        type: file
+        description: BWA genome index files
+        pattern: "*.{amb,ann,bwt,pac,sa}"
+    - version:
+        type: file
+        description: File containing software version
+        pattern: "*.{version.txt}"
 authors:
+    - "@drpatelh"
     - "@maxulysse"
