--- a/modules/nf-core/modules/bwa/mem/meta.yml
+++ b/modules/nf-core/modules/bwa/mem/meta.yml
@@ -1,42 +1,45 @@
-name: bwa mem
-description: Performs fastq alignment to a fasta reference using the burrows-wheeler aligner
+name: bwa_mem
+description: Performs fastq alignment to a fasta reference using BWA
 keywords:
     - mem
     - bwa
     - alignment
+    - map
+    - fastq
+    - bam
+    - sam
 tools:
     - bwa:
         description: |
-            BWA is a software package for mapping DNA sequences against a large reference genome, such as the human genome.
+            BWA is a software package for mapping DNA sequences against
+            a large reference genome, such as the human genome.
         homepage: http://bio-bwa.sourceforge.net/
         documentation: http://www.htslib.org/doc/samtools.html
         arxiv: arXiv:1303.3997
 input:
-    -
-        - id:
-            type: val
-            description: read/read pair id
-        - reads:
-            type: file
-            description: Input fastq file
-            pattern: "*.{fastq,fq}"
-        - index:
-            type: file
-            description: bwa indexes file
-            pattern: "*.{amb,ann,bwt,pac,sa}"
-        - prefix:
-            type: val
-            description: bwa index prefix, equivalent to index file names without extensions. Usually the reference genome file name unless otherwise specified.
+    - meta:
+        type: map
+        description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+    - reads:
+        type: file
+        description: |
+            List of input FastQ files of size 1 and 2 for single-end and paired-end data,
+            respectively.
+    - index:
+        type: file
+        description: BWA genome index files
+        pattern: "Directory containing BWA index *.{amb,ann,bwt,pac,sa}"
 output:
-    -
-        - bam:
-            type: file
-            description: Output bam file
-            pattern: "*.bam"
-        - bamindex:
-            type: file
-            description: Output bam index file
-            pattern: "*.bai"
-
+    - bam:
+        type: file
+        description: Output BAM file containing read alignments
+        pattern: "*.{bam}"
+    - version:
+        type: file
+        description: File containing software version
+        pattern: "*.{version.txt}"
 authors:
+    - "@drpatelh"
     - "@jeremy1805"
