--- a/modules/nf-core/modules/samtools/index/meta.yml
+++ b/modules/nf-core/modules/samtools/index/meta.yml
@@ -1,7 +1,10 @@
-name: samtools index
-description: index a BAM or CRAM file
+name: samtools_index
+description: Index SAM/BAM/CRAM file
 keywords:
     - index
+    - bam
+    - sam
+    - cram
 tools:
     - samtools:
         description: |
@@ -12,16 +15,33 @@ tools:
         documentation: hhttp://www.htslib.org/doc/samtools.html
         doi: 10.1093/bioinformatics/btp352
 input:
-    -
-        - input:
-            type: file
-            description: Input BAM or CRAM file
-            pattern: "*.{bam,cram}"
+    - meta:
+        type: map
+        description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+    - bam:
+        type: file
+        description: BAM/CRAM/SAM file
+        pattern: "*.{bam,cram,sam}"
 output:
-    -
-        - index:
-            type: file
-            description: BAM or CRAM index file
-            pattern: "*.{bai}"
+    - meta:
+        type: map
+        description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+    - bai:
+        type: file
+        description: BAM/CRAM/SAM index file
+        pattern: "*.{bai,crai,sai}"
+    - csi:
+        type: file
+        description: CSI index file
+        pattern: "*.{csi}"
+    - version:
+        type: file
+        description: File containing software version
+        pattern: "*.{version.txt}"
 authors:
+    - "@drpatelh"
     - "@ewels"
