--- a/modules/nf-core/modules/samtools/sort/meta.yml
+++ b/modules/nf-core/modules/samtools/sort/meta.yml
@@ -1,7 +1,10 @@
-name: samtools sort
-description: Sort a BAM or CRAM file
+name: samtools_sort
+description: Sort SAM/BAM/CRAM file
 keywords:
     - sort
+    - bam
+    - sam
+    - cram
 tools:
     - samtools:
         description: |
@@ -12,16 +15,29 @@ tools:
         documentation: hhttp://www.htslib.org/doc/samtools.html
         doi: 10.1093/bioinformatics/btp352
 input:
-    -
-        - input:
-            type: file
-            description: Input BAM or CRAM file
-            pattern: "*.{bam,cram}"
+    - meta:
+        type: map
+        description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+    - bam:
+        type: file
+        description: BAM/CRAM/SAM file
+        pattern: "*.{bam,cram,sam}"
 output:
-    -
-        - sorted_file:
-            type: file
-            description: Sorted BAM or CRAM file
-            pattern: "*.{bam,cram}"
+    - meta:
+        type: map
+        description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+    - bam:
+        type: file
+        description: Sorted BAM/CRAM/SAM file
+        pattern: "*.{bam,cram,sam}"
+    - version:
+        type: file
+        description: File containing software version
+        pattern: "*.{version.txt}"
 authors:
+    - "@drpatelh"
     - "@ewels"
