Get rid of deprecated params

--- a/nextflow.config
+++ b/nextflow.config
@@ -88,10 +88,7 @@ params {
     show_hidden_params         = false
     schema_ignore_params       = 'genomes,modules'
     enable_conda               = false
-    // TODO substitute conda by enable_conda
-    conda                      = false
     singularity_pull_docker_container = false
-    clusterOptions             = false // TODO get rid of it (such as in rnaseq 3.1)
 
     // MultiQC options
     multiqc_config             = null
@@ -118,7 +115,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-// TODO some process will be run by default using this image, they should be refactored
+// TODO some process will be run by default using this image by now, the individual process container/env should be added
 process.container = 'nfcore/chipseq:dev'
 
 // Load base.config by default for all pipelines
