Update all modules on nf-core/modules for he new syntax

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -48,7 +48,7 @@ params {
             suffix        = ".mLb.sorted"
         }
         'picard_markduplicates' {
-            args          = "ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
+            args          = "--ASSUME_SORTED true --REMOVE_DUPLICATES false --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp"
             publish_dir   = "bwa/mergedLibrary"
             suffix        = ".mLb.mkD.sorted"
         }
