--- a/modules/nf-core/modules/bwa/index/meta.yml
+++ b/modules/nf-core/modules/bwa/index/meta.yml
@@ -25,7 +25,7 @@ output:
     - version:
         type: file
         description: File containing software version
-        pattern: "*.{version.txt}"
+        pattern: "versions.yml"
 authors:
     - "@drpatelh"
     - "@maxulysse"
