--- a/modules/nf-core/modules/bwa/mem/meta.yml
+++ b/modules/nf-core/modules/bwa/mem/meta.yml
@@ -39,7 +39,7 @@ output:
     - version:
         type: file
         description: File containing software version
-        pattern: "*.{version.txt}"
+        pattern: "versions.yml"
 authors:
     - "@drpatelh"
     - "@jeremy1805"
