--- a/modules/nf-core/modules/deeptools/plotfingerprint/meta.yml
+++ b/modules/nf-core/modules/deeptools/plotfingerprint/meta.yml
@@ -53,7 +53,7 @@ output:
   - version:
       type: file
       description: File containing software version
-      pattern: "*.{version.txt}"
+      pattern: "versions.yml"
 
 authors:
   - "@emiller88"
