--- a/modules/nf-core/modules/picard/mergesamfiles/meta.yml
+++ b/modules/nf-core/modules/picard/mergesamfiles/meta.yml
@@ -35,6 +35,6 @@ output:
     - version:
         type: file
         description: File containing software version
-        pattern: "*.{version.txt}"
+        pattern: "versions.yml"
 authors:
     - "@drpatelh"
