Update nf-core modules

--- a/modules/nf-core/modules/bwa/mem/meta.yml
+++ b/modules/nf-core/modules/bwa/mem/meta.yml
@@ -36,9 +36,9 @@ output:
         type: file
         description: Output BAM file containing read alignments
         pattern: "*.{bam}"
-    - version:
+    - versions:
         type: file
-        description: File containing software version
+        description: File containing software versions
         pattern: "versions.yml"
 authors:
     - "@drpatelh"
