--- a/modules/nf-core/modules/deeptools/computematrix/meta.yml
+++ b/modules/nf-core/modules/deeptools/computematrix/meta.yml
@@ -46,9 +46,9 @@ output:
       description: |
         tabular file containing the scores of the generated matrix
       pattern: "*.{computeMatrix.vals.mat.tab}"
-  - version:
+  - versions:
       type: file
-      description: File containing software version
+      description: File containing software versions
       pattern: "versions.yml"
 
 authors:
