--- a/modules/nf-core/modules/picard/collectmultiplemetrics/meta.yml
+++ b/modules/nf-core/modules/picard/collectmultiplemetrics/meta.yml
@@ -41,9 +41,9 @@ output:
         type: file
         description: PDF plots of metrics
         pattern: "*.{pdf}"
-    - version:
+    - versions:
         type: file
-        description: File containing software version
+        description: File containing software versions
         pattern: "versions.yml"
 authors:
     - "@drpatelh"
