--- a/modules/nf-core/modules/bwa/index/meta.yml
+++ b/modules/nf-core/modules/bwa/index/meta.yml
@@ -22,9 +22,9 @@ output:
         type: file
         description: BWA genome index files
         pattern: "*.{amb,ann,bwt,pac,sa}"
-    - version:
+    - versions:
         type: file
-        description: File containing software version
+        description: File containing software versions
         pattern: "versions.yml"
 authors:
     - "@drpatelh"
