--- a/modules/nf-core/modules/deeptools/plotfingerprint/meta.yml
+++ b/modules/nf-core/modules/deeptools/plotfingerprint/meta.yml
@@ -50,9 +50,9 @@ output:
       description: |
         file containing BAM file quality metrics
       pattern: "*.{qcmetrics.txt}"
-  - version:
+  - versions:
       type: file
-      description: File containing software version
+      description: File containing software versions
       pattern: "versions.yml"
 
 authors:
