--- a/modules/nf-core/modules/deeptools/plotheatmap/meta.yml
+++ b/modules/nf-core/modules/deeptools/plotheatmap/meta.yml
@@ -44,9 +44,9 @@ output:
         File containing the matrix of values
         used to generate the heatmap
       pattern: "*.{plotHeatmap.mat.tab}"
-  - version:
+  - versions:
       type: file
-      description: File containing software version
+      description: File containing software versions
       pattern: "versions.yml"
 
 authors:
