--- a/modules/nf-core/modules/homer/annotatepeaks/meta.yml
+++ b/modules/nf-core/modules/homer/annotatepeaks/meta.yml
@@ -38,9 +38,9 @@ output:
       type: file
       description: The annotated peaks
       pattern: "*annotatePeaks.txt"
-  - version:
+  - versions:
       type: file
-      description: File containing software version
+      description: File containing software versions
       pattern: "versions.yml"
 authors:
   - "@drpatelh"
