--- a/modules/nf-core/modules/picard/mergesamfiles/meta.yml
+++ b/modules/nf-core/modules/picard/mergesamfiles/meta.yml
@@ -32,9 +32,9 @@ output:
         type: file
         description: Merged BAM file
         pattern: "*.{bam}"
-    - version:
+    - versions:
         type: file
-        description: File containing software version
+        description: File containing software versions
         pattern: "versions.yml"
 authors:
     - "@drpatelh"
