--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,4 +1,11 @@
 lint:
   files_unchanged:
+    - .markdownlint.yml
+    - assets/email_template.html
+    - assets/email_template.txt
+    - lib/NfcoreTemplate.groovy
     - assets/multiqc_config.yaml
   actions_ci: False #get rid of the error "CI is not building the correct docker image. Should be: docker build..."
+  files_exist:
+    - bin/scrape_software_versions.py
+    - modules/local/get_software_versions.nf
