First pass updates

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -153,13 +153,9 @@ params {
             args          = "-F SAF -O --fracOverlap 0.2"
             publish_dir   = "bwa/mergedLibrary/macs2"
         }
-        'deseq2_featurecounts' {
-            publish_dir   = "bwa/mergedLibrary/macs2"
-        }
-        'get_software_versions' {
-            publish_dir   = "pipeline_info"
-            publish_files = ['csv':'']
-        }
+        //'deseq2_featurecounts' {
+        //    publish_dir   = "bwa/mergedLibrary/macs2"
+        //}
         'multiqc' {
             args            = ''
             publish_dir   = "multiqc"
