--- a/nextflow.config
+++ b/nextflow.config
@@ -10,25 +10,25 @@
 params {
     // Input options
     input                      = null
-    seq_center                 = ''
+    seq_center                 = null
     fragment_size              = 200
     fingerprint_bins           = 500000
 
     // References
-    genome                     = false
+    genome                     = null
     save_reference             = false
 
     // Options: Trimming
-    clip_r1                    = 0
-    clip_r2                    = 0
-    three_prime_clip_r1        = 0
-    three_prime_clip_r2        = 0
-    trim_nextseq               = 0
+    clip_r1                    = null
+    clip_r2                    = null
+    three_prime_clip_r1        = null
+    three_prime_clip_r2        = null
+    trim_nextseq               = null
     skip_trimming              = false
     save_trimmed               = false
 
     // Options: Alignments
-    bwa_min_score              = false
+    bwa_min_score              = null
     keep_dups                  = false
     keep_multi_map             = false
     save_align_intermeds       = false
@@ -36,8 +36,8 @@ params {
     // Options: Peaks
     narrow_peak                = false
     broad_cutoff               = 0.1
-    macs_fdr                   = false
-    macs_pvalue                = false
+    macs_fdr                   = null
+    macs_pvalue                = null
     min_reps_consensus         = 1
     save_macs_pileup           = false
     skip_peak_qc               = false
@@ -59,42 +59,29 @@ params {
     skip_multiqc               = false
 
     // Options: Config
-    multiqc_config             = false
     bamtools_filter_pe_config  = "$projectDir/assets/bamtools_filter_pe.json"
     bamtools_filter_se_config  = "$projectDir/assets/bamtools_filter_se.json"
 
-    // Options: Custom config
-    custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_description = false
-    config_profile_contact     = false
-    config_profile_url         = false
-
     // Boilerplate options
-    help                       = false
     outdir                     = './results'
     publish_dir_mode           = 'copy'
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
-    max_multiqc_email_size     = 25.MB
-    tracedir                   = "${params.outdir}/pipeline_info"
-    email                      = false
-    email_on_fail              = false
+    multiqc_config             = null
+    multiqc_title              = null
+    email                      = null
+    email_on_fail              = null
+    max_multiqc_email_size     = '25.MB'
     plaintext_email            = false
     monochrome_logs            = false
-    // name                       = false // TODO remove parameter
-    hostnames                  = false
+    help                       = false
+    igenomes_base              = 's3://ngi-igenomes/igenomes'
+    tracedir                   = "${params.outdir}/pipeline_info"
+    igenomes_ignore            = false
     validate_params            = true
     show_hidden_params         = false
     schema_ignore_params       = 'genomes,modules'
     enable_conda               = false
     singularity_pull_docker_container = false
-
-    // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    max_multiqc_email_size     = '25.MB'
-
+    // name                       = false // TODO remove parameter
 
     // Config options
     custom_config_version      = 'master'
