--- a/conf/test.config
+++ b/conf/test.config
@@ -20,7 +20,7 @@ params {
   max_time = 6.h
 
   // Input data
-  input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/design.csv'
+  input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_test.csv'
 
   // Genome references
   fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
