Add default for skip_qc and in json schema

--- a/nextflow.config
+++ b/nextflow.config
@@ -49,6 +49,7 @@ params {
     skip_diff_analysis         = false
 
     // Options: QC
+    skip_qc                    = false
     skip_fastqc                = false
     skip_picard_metrics        = false
     skip_preseq                = false
