--- a/conf/modules.config
+++ b/conf/modules.config
@@ -56,9 +56,11 @@ params {
             publish_dir     = "bwa/mergedLibrary"
             suffix          = ".mLb.mkD.sorted"
         }
-        'samtools_sort_merged_lib' {
-            publish_dir     = "bwa/mergedLibrary"
+        'picard_markduplicates_samtools' {
+            args            = ''
             suffix          = ".mLb.mkD.sorted"
+            publish_files   = ['bai':'', 'stats':'samtools_stats', 'flagstat':'samtools_stats', 'idxstats':'samtools_stats']
+            publish_dir     = "bwa/mergedLibrary"
         }
         'bam_filter' {
             publish_dir     = "bwa/mergedLibrary"
