--- a/nextflow.config
+++ b/nextflow.config
@@ -82,7 +82,6 @@ params {
     schema_ignore_params       = 'genomes,modules'
     enable_conda               = false
     singularity_pull_docker_container = false
-    // name                       = false // TODO remove parameter
 
     // Config options
     custom_config_version      = 'master'
@@ -104,6 +103,7 @@ params {
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
 // TODO some process will be run by default using this image by now, the individual process container/env should be added
+// when the corresponding mulled containers are created and added to the processes
 process.container = 'nfcore/chipseq:dev'
 
 // Load base.config by default for all pipelines
