--- a/modules/nf-core/modules/samtools/stats/meta.yml
+++ b/modules/nf-core/modules/samtools/stats/meta.yml
@@ -22,14 +22,18 @@ input:
         description: |
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
-    - bam:
-        type: file
-        description: BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-    - bai:
-        type: file
-        description: Index for BAM/CRAM/SAM file
-        pattern: "*.{bai,crai,sai}"
+    - input:
+      type: file
+      description: BAM/CRAM file from alignment
+      pattern: "*.{bam,cram}"
+    - input_index:
+      type: file
+      description: BAI/CRAI file from alignment
+      pattern: "*.{bai,crai}"
+    - fasta:
+        type: optional file
+        description: Reference file the CRAM was created with
+        pattern: "*.{fasta,fa}"
 output:
     - meta:
         type: map
@@ -46,3 +50,4 @@ output:
         pattern: "versions.yml"
 authors:
     - "@drpatelh"
+    - "@FriederikeHanssen"
