--- a/conf/modules.config
+++ b/conf/modules.config
@@ -96,8 +96,33 @@ process {
             enabled: params.save_reference
         ]
     }
-
-
+    withName: '.*:FASTQC_TRIMGALORE:FASTQC' {
+        ext.args = '--quiet'
+    }
+    withName: '.*:FASTQC_TRIMGALORE:TRIMGALORE' {
+        ext.args   = [
+            '--fastqc',
+            params.trim_nextseq > 0 ? "--nextseq ${params.trim_nextseq}" : ''
+        ].join(' ').trim()
+        publishDir = [
+            [
+                path: { "${params.outdir}/trimgalore/fastqc" },
+                mode: 'copy',
+                pattern: "*.{html,zip}"
+            ],
+            [
+                path: { "${params.outdir}/trimgalore" },
+                mode: 'copy',
+                pattern: "*.fq.gz",
+                enabled: params.save_trimmed
+            ],
+            [
+                path: { "${params.outdir}/trimgalore" },
+                mode: 'copy',
+                pattern: "*.txt"
+            ]
+        ]
+    }
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_BWA_MEM:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
     // TODO: substitute by this line when multiple aligners are implemented
     // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
@@ -157,30 +182,6 @@ process {
 
 // process {
 
-    // withName: TRIMGALORE {
-    //     ext.args   = [
-    //         '--fastqc',
-    //         params.trim_nextseq > 0 ? "--nextseq ${params.trim_nextseq}" : ''
-    //     ].join(' ').trim()
-    //     publishDir = [
-    //         [
-    //             path: { "${params.outdir}/trimgalore/fastqc" },
-    //             mode: copy,
-    //             pattern: "*.{html,zip}"
-    //         ],
-    //         [
-    //             path: { "${params.outdir}/trimgalore" },
-    //             mode: copy,
-    //             pattern: "*.fq.gz",
-    //             enabled: params.save_trimmed
-    //         ],
-    //         [
-    //             path: { "${params.outdir}/trimgalore" },
-    //             mode: copy,
-    //             pattern: "*.txt"
-    //         ]
-    //     ]
-    // }
     withName: BWA_MEM {
         ext.args   = [
                         '-M',
@@ -393,20 +394,12 @@ process {
 
     withName: '.*:MARK_DUPLICATES_PICARD:BAM_STATS_SAMTOOLS:.*' {
         publishDir = [
-            path: { "${params.outdir}/${params.aligner}/samtools_stats" },
+            path: { "${params.outdir}/bwa/samtools_stats" },
             mode: 'copy',
             pattern: '*.{stats,flagstat,idxstats}'
         ]
     }
 // }
-}
-
-if (!params.skip_fastqc) {
-    process {
-        withName: FASTQC {
-                ext.args = '--quiet'
-            }
-    }
 }
 
 // here
